Correction to Dark mode

--- a/src/theme.css
+++ b/src/theme.css
@@ -29,6 +29,7 @@
 }*/
 
 body {
+	background-color: var(--color-bg);
 	margin: 0;
 	padding: 0;
 	width: 100%;
